--- a/app/src/main/res/layout/chat_bubble_right.xml
+++ b/app/src/main/res/layout/chat_bubble_right.xml
@@ -1,60 +1,60 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_gravity="right"
-    android:layout_height="wrap_content">
+    android:orientation="vertical">
 
 
     <TextView
         android:id="@+id/from"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_width="wrap_content"
+        android:layout_gravity="left"
         android:gravity="left"
         android:singleLine="true"
-        android:layout_gravity="left"
-        android:textStyle="bold"
-        android:textAlignment="gravity"
         android:text="from"
+        android:textAlignment="gravity"
         android:textColor="@android:color/white"
-        android:layout_height="wrap_content" />
+        android:textStyle="bold" />
 
 
     <TextView
         android:id="@+id/message"
-        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="right"
         android:gravity="right"
         android:singleLine="false"
-        android:layout_gravity="right"
-        android:textSize="18dp"
         android:text="message"
         android:textAlignment="gravity"
         android:textColor="@android:color/white"
-        android:layout_height="wrap_content" />
+        android:textSize="18dp" />
 
 
     <TextView
         android:id="@+id/datetime"
-        android:layout_alignParentRight="true"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_gravity="right"
         android:gravity="left"
         android:singleLine="true"
-        android:layout_gravity="right"
-        android:textStyle="italic"
         android:text="datetime"
         android:textAlignment="gravity"
         android:textColor="@android:color/white"
-        android:layout_height="wrap_content" />
+        android:textStyle="italic" />
 
     <TextView
         android:id="@+id/filler"
-        android:layout_alignParentRight="true"
         android:layout_width="wrap_content"
-        android:gravity="left"
-        android:singleLine="true"
+        android:layout_height="15dp"
+        android:layout_alignParentRight="true"
         android:layout_gravity="right"
-        android:layout_height="15dp" />
+        android:gravity="left"
+        android:singleLine="true" />
 
 
 </LinearLayout>
