materials working sort off still the nav drawer offset not taking title bar into account

--- a/app/src/main/res/layout/chat_post.xml
+++ b/app/src/main/res/layout/chat_post.xml
@@ -22,7 +22,7 @@
         android:scrollbars="vertical"
         android:textSize="18dp" />
 
-    <oddymobstar.util.widget.PostButtons
+    <mobile.che.com.oddymobstar.chemobile.util.widget.PostButtons
         android:layout_width="50dp"
         android:layout_height="110dp"
         android:layout_weight="0.01" />
