--- a/app/src/main/res/layout/activity_project_che.xml
+++ b/app/src/main/res/layout/activity_project_che.xml
@@ -1,7 +1,45 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/map"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.ProjectCheActivity" />
+    android:fitsSystemWindows="true"
+    tools:context="mobile.che.com.oddymobstar.chemobile.activity.ProjectCheActivity">
+
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimaryDark"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+    </android.support.design.widget.AppBarLayout>
+
+
+    <include layout="@layout/project_che" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="16dp"
+        android:layout_gravity="bottom|end"
+        app:fabSize="normal"
+        app:elevation="12dp"
+        app:borderWidth="0dp"
+        android:stateListAnimator="@anim/raise"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:layout_marginRight="16dp"/>
+
+
+
+
+</android.support.design.widget.CoordinatorLayout>
