--- a/app/src/main/res/layout/configuration_fragment.xml
+++ b/app/src/main/res/layout/configuration_fragment.xml
@@ -7,7 +7,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:elevation="12dp"
+    android:elevation="12dp"
     app:borderWidth="0dp"
     android:background="@android:color/white"
     android:orientation="vertical"  >
