--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -2,6 +2,7 @@
     android:layout_width="match_parent"
     android:layout_height="192dp"
     android:padding="16dp"
+    android:id="@+id/nav_header"
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
     android:orientation="vertical"
     android:background="@drawable/che"
@@ -12,7 +13,7 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:src="@drawable/ic_person_outline_white_24dp"
-        android:layout_above="@+id/nav_header"
+        android:layout_above="@+id/player_name"
         android:layout_alignParentLeft="true" />
 
 
@@ -20,9 +21,24 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/nav_header"
-        android:text="Header"
+        android:id="@+id/player_name"
+        android:layout_above="@+id/player_key"
+        android:text=""
         android:textSize="18dp"
+        android:singleLine="true"
+        android:maxLength="30"
+        android:textColor="@android:color/white"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:layout_alignParentLeft="true" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/player_key"
+        android:text=""
+        android:textSize="18dp"
+        android:singleLine="true"
+        android:maxLength="30"
         android:textColor="@android:color/white"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:layout_alignParentBottom="true"
