--- a/app/src/main/res/layout/post_buttons.xml
+++ b/app/src/main/res/layout/post_buttons.xml
@@ -1,20 +1,20 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:background="@android:color/holo_green_dark"
-    android:layout_height="110dp">
+    android:layout_height="110dp"
+    android:background="@android:color/holo_green_dark">
 
 
     <Button
         android:id="@+id/post"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="50dp"
-        android:layout_alignParentRight="true"
         android:layout_height="50dp"
+        android:layout_alignParentRight="true"
         android:layout_marginTop="5dp"
-        android:textSize="30dp"
         android:onClick="sendPost"
+        android:text="@string/fa_send"
         android:textColor="@android:color/white"
-        android:text="@string/fa_send" />
+        android:textSize="30dp" />
 
     <Button
         android:id="@+id/cancel"
@@ -24,9 +24,9 @@
         android:layout_alignParentRight="true"
         android:layout_below="@id/post"
         android:layout_marginBottom="5dp"
-        android:textSize="36dp"
         android:onClick="cancelPost"
+        android:text="@string/fa_cancel"
         android:textColor="@android:color/white"
-        android:text="@string/fa_cancel" />
+        android:textSize="36dp" />
 
 </RelativeLayout>
