--- a/app/src/main/res/layout/activity_project_che.xml
+++ b/app/src/main/res/layout/activity_project_che.xml
@@ -28,18 +28,16 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="16dp"
+        android:layout_alignParentRight="true"
         android:layout_gravity="bottom|end"
-        app:fabSize="normal"
-        app:elevation="12dp"
-        app:borderWidth="0dp"
-        android:stateListAnimator="@anim/raise"
+        android:layout_marginBottom="16dp"
+        android:layout_marginRight="16dp"
         android:foreground="?android:attr/selectableItemBackground"
-        android:layout_marginRight="16dp"/>
-
-
+        android:stateListAnimator="@anim/raise"
+        app:borderWidth="0dp"
+        app:elevation="12dp"
+        app:fabSize="normal" />
 
 
 </android.support.design.widget.CoordinatorLayout>
