--- a/app/src/main/res/layout/chat_fragment.xml
+++ b/app/src/main/res/layout/chat_fragment.xml
@@ -2,27 +2,26 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@android:color/transparent"
-    android:layout_height="match_parent">
+    android:orientation="vertical">
 
     <ListView
         android:id="@+id/list"
-        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:layout_weight="1"
         android:stackFromBottom="true"
-        android:transcriptMode="alwaysScroll"
-        android:layout_height="wrap_content" />
+        android:transcriptMode="alwaysScroll" />
 
     <mobile.che.com.oddymobstar.chemobile.util.widget.ChatPost
         android:id="@+id/chat_post"
         android:layout_width="fill_parent"
-        app:borderWidth="0dp"
+        android:layout_height="120dp"
         android:layout_alignParentBottom="true"
-        android:layout_height="120dp" />
-
+        app:borderWidth="0dp" />
 
 
 </LinearLayout>
