--- a/app/src/main/res/layout/game_list_fragment.xml
+++ b/app/src/main/res/layout/game_list_fragment.xml
@@ -7,20 +7,18 @@
 
 
     <GridView
+        android:id="@+id/grid_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:layout_marginTop="5dp"
-        android:id="@+id/grid_view"
-        android:layout_width="match_parent"
         android:layout_weight="0.8"
-        android:verticalSpacing="5dp"
+        android:gravity="center"
         android:horizontalSpacing="5dp"
         android:numColumns="auto_fit"
-        android:gravity="center"
-        android:layout_height="wrap_content" />
-
-
+        android:verticalSpacing="5dp" />
 
 
 </LinearLayout>
