--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,47 +1,46 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/nav_header"
     android:layout_width="match_parent"
     android:layout_height="192dp"
-    android:padding="16dp"
-    android:id="@+id/nav_header"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark"
-    android:orientation="vertical"
     android:background="@drawable/che"
-    android:gravity="bottom">
+    android:gravity="bottom"
+    android:orientation="vertical"
+    android:padding="16dp"
+    android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <mobile.che.com.oddymobstar.chemobile.util.graphics.RoundedImageView
         android:id="@+id/user_image"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:src="@drawable/ic_person_outline_white_24dp"
         android:layout_above="@+id/player_name"
-        android:layout_alignParentLeft="true" />
-
+        android:layout_alignParentLeft="true"
+        android:src="@drawable/ic_person_outline_white_24dp" />
 
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/player_name"
-        android:layout_above="@+id/player_key"
-        android:text=""
-        android:textSize="18dp"
-        android:singleLine="true"
-        android:maxLength="30"
-        android:textColor="@android:color/white"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:layout_alignParentLeft="true" />
-
-    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/player_key"
-        android:text=""
-        android:textSize="18dp"
-        android:singleLine="true"
+        android:layout_above="@+id/player_key"
+        android:layout_alignParentLeft="true"
         android:maxLength="30"
-        android:textColor="@android:color/white"
+        android:singleLine="true"
+        android:text=""
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@android:color/white"
+        android:textSize="18dp" />
+
+    <TextView
+        android:id="@+id/player_key"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true" />
+        android:layout_alignParentLeft="true"
+        android:maxLength="30"
+        android:singleLine="true"
+        android:text=""
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@android:color/white"
+        android:textSize="18dp" />
 
 </RelativeLayout>
