--- a/app/src/main/res/layout/project_che.xml
+++ b/app/src/main/res/layout/project_che.xml
@@ -1,22 +1,22 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="mobile.che.com.oddymobstar.chemobile.activity.ProjectCheActivity"
     tools:showIn="@layout/activity_project_che">
 
 
     <fragment
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment">
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <FrameLayout
+            android:id="@+id/chat_fragment"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/chat_fragment" />
+            android:layout_height="wrap_content" />
     </fragment>
-    </RelativeLayout>
+</RelativeLayout>
