--- a/app/src/main/res/layout/game_subtype_list_item.xml
+++ b/app/src/main/res/layout/game_subtype_list_item.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/game_card_view_inner"
+        android:id="@+id/game_sub_type_view_inner"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_gravity="center"
@@ -19,13 +19,13 @@
         card_view:cardElevation="5dp">
 
         <TextView
-            android:id="@+id/game_item_name"
+            android:id="@+id/game_sub_type_key"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:gravity="left"
             android:textColor="@android:color/black"
-            android:textSize="28dp"
+            android:textSize="22dp"
             android:textStyle="bold" />
 
     </android.support.v7.widget.CardView>
