--- a/app/src/main/res/layout/project_che.xml
+++ b/app/src/main/res/layout/project_che.xml
@@ -12,11 +12,23 @@
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <FrameLayout
             android:id="@+id/chat_fragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </fragment>
+
+
+    <TextView
+        android:id="@+id/nav_timer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:textColor="@android:color/holo_red_dark"
+        android:textSize="36dp"
+        android:layout_alignParentEnd="true" />
+
 </RelativeLayout>
