--- a/app/src/main/res/layout/project_che.xml
+++ b/app/src/main/res/layout/project_che.xml
@@ -8,17 +8,28 @@
     tools:showIn="@layout/activity_project_che">
 
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:id="@+id/vidiprint_fragment"/>
+
+
+
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
+        android:layout_below="@+id/vidiprint_fragment"
         android:layout_height="match_parent">
 
         <FrameLayout
             android:id="@+id/chat_fragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
+
     </fragment>
+
 
 
     <TextView
@@ -26,6 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="10dp"
+        android:layout_below="@+id/vidiprint_fragment"
         android:layout_marginTop="10dp"
         android:textColor="@android:color/holo_red_dark"
         android:textSize="36dp"
