bug fixes on sprint

--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -20,6 +20,10 @@
             android:title="Game">
             <menu>
                 <item
+                    android:id="@+id/game_alerts"
+                    android:icon="@drawable/ic_notifications_black_24dp"
+                    android:title="@string/menu_alerts" />
+                <item
                     android:id="@+id/game_land"
                     android:icon="@drawable/ic_directions_car_black_24dp"
                     android:title="@string/menu_land" />
