--- a/app/src/main/res/layout/vidiprint_layout.xml
+++ b/app/src/main/res/layout/vidiprint_layout.xml
@@ -8,20 +8,13 @@
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:stackFromBottom="true"
+        android:stackFromBottom="false"
         android:transcriptMode="alwaysScroll"
         android:id="@+id/vidiprint_list">
 
     </ListView>
 
-    <mobile.che.com.oddymobstar.chemobile.util.graphics.VidiPrintView
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:textSize="16dp"
-        android:id="@+id/vidi_print_new_item"
-        android:layout_below="@+id/vidiprint_list"
-        android:textColor="@android:color/holo_green_dark"/>
 
     </RelativeLayout>
