--- a/app/src/main/res/layout/game_list_item.xml
+++ b/app/src/main/res/layout/game_list_item.xml
@@ -18,16 +18,50 @@
         card_view:cardCornerRadius="4dp"
         card_view:cardElevation="5dp">
 
+
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+        <ImageView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:id="@+id/game_card_view_image"/>
+
+
+    <TextView
+        android:id="@+id/game_item_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="left"
+        android:textColor="@android:color/black"
+        android:textSize="28dp"
+        android:textStyle="bold"
+        android:layout_below="@id/game_card_view_image"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="5dp" />
+
+
         <TextView
-            android:id="@+id/game_item_name"
+            android:id="@+id/game_item_total"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:gravity="left"
+            android:gravity="right"
             android:textColor="@android:color/black"
             android:textSize="28dp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_alignParentRight="true" />
+
+        </RelativeLayout>
 
     </android.support.v7.widget.CardView>
+
 
 </LinearLayout>
