--- a/app/src/main/res/layout/game_subtype_list_item.xml
+++ b/app/src/main/res/layout/game_subtype_list_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -18,6 +18,7 @@
         card_view:cardCornerRadius="4dp"
         card_view:cardElevation="5dp">
 
+
         <TextView
             android:id="@+id/game_sub_type_key"
             android:layout_width="match_parent"
@@ -30,4 +31,4 @@
 
     </android.support.v7.widget.CardView>
 
-</LinearLayout>
+</RelativeLayout>
